--- a/package.json
+++ b/package.json
@@ -16,14 +16,15 @@
   "repository": "https://github.com/nei/d3-muni.git",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-cli": "^0.1.13",
     "grunt-bower": "^0.21.0",
+    "grunt-cli": "^0.1.13",
+    "grunt-contrib-compress": "^1.1.1",
     "grunt-contrib-cssmin": "^0.13.0",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-sass": "^0.9.2",
     "grunt-contrib-uglify": "^0.9.1",
     "grunt-contrib-watch": "^0.6.1",
-    "static-server": "^2.0.1",
-    "matchdep": "^1.0.1"
+    "matchdep": "^1.0.1",
+    "static-server": "^2.0.1"
   }
 }
